# izmir-open-data-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CLIENT.md  ENDPOINTS.md  MCP.md
examples/: cli_example.sh  mcp_example.py  scraper_example.py
src/izmir_open_data/: __init__.py  cli.py  client.py  mcp_server.py
src/izmir_open_data/cli/: __init__.py
src/izmir_open_data/core/: client.py  exceptions.py  types.py
src/izmir_open_data/endpoints/: __init__.py  afetler.py  base.py  bisim.py  cografi.py  eczaneler.py  egitim.py  eshot.py  etkinlikler.py  hizmet.py  iklim.py  izban.py  izmirimkart.py  izsu.py  iztek.py  kamu.py  kutuphane.py  metro.py  muhtarliklar.py  otopark.py  pazarlar.py  plaj.py  saglik.py  sosyal.py  spor.py  taksi.py  tarihi.py  trafik.py  tramvay.py  tren.py  vapur.py  wizmirnet.py
src/izmir_open_data/mcp/: __init__.py
src/izmir_open_data/scraper/: __init__.py
tests/: __init__.py  test_client.py  test_live_endpoints.py
