[project]
name = "izmir-open-data-py"
version = "0.1.0"
description = "Izmir Open Data API Client and MCP Server"
readme = "README.md"
authors = [
    { name = "Ata Can", email = "atacanymc@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "fastmcp>=0.1.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0"
]

[project.scripts]
izmir-data = "izmir_open_data.cli:app"
izmir-mcp = "izmir_open_data.mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["no-any-return", "return-value", "no-untyped-def", "no-untyped-call", "operator", "index", "attr-defined", "misc", "type-arg"]
